--- a/speakers.html
+++ b/speakers.html
@@ -3,10 +3,14 @@
     <head>
         <title>TEDxREVA University Speakers</title>
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
+        <link href="extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
 
     <body>
+        <div class="page_container">
+        <a href="#"><img src="/images/vijay.jpg" alt="" class="spkimg center" ></a>
+        </div>
 
     </body>
 </html>
