--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
 
-    <body>
-
+    <body class="primary_inverted">
+        <div class="page_container center">
+            <div class="column large9 pivot_container">
+                <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
+                <button class=" primary_inverted small right">Schedule</button>
+                <button class=" primary_inverted small right">Partners</button>
+                <button class=" primary_inverted small right">Speakers</button>
+                <button class=" primary_inverted small right">About</button>
+                <button class=" primary_inverted small right">Home</button>
+            </div>
+            <div class="column large9 small12 medium9 center">
+                <br><br><br><br>
+                <h3 class="ta_center"><span style="color: red">TEDx</span>REVAUniversity</h3>
+                <h3 class="ta_center">April 2020</h3>
+            </div>
+        </div>
     </body>
 </html>
