Added TopNav In Speakers

--- a/speakers.html
+++ b/speakers.html
@@ -7,9 +7,20 @@
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
 
-    <body>
+    <body class="primary_inverted">
+        <div class="page_container center">
+            <div class="column large9 pivot_container">
+                <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
+                <button class=" primary_inverted small right">Schedule</button>
+                <button class=" primary_inverted small right">Partners</button>
+                <button class=" primary_inverted small right">Speakers</button>
+                <button class=" primary_inverted small right">About</button>
+                <button class=" primary_inverted small right">Home</button>
+            </div>
+        </div>
+        <br><br><br>
         <div class="page_container">
-        <a href="#"><img src="/images/vijay.jpg" alt="" class="spkimg center" ></a>
+            <a href="#"><img src="/images/vijay.jpg" alt="" class="spkimg center" ></a>
         </div>
 
     </body>
