--- a/speakers.html
+++ b/speakers.html
@@ -15,7 +15,7 @@
                 <button class=" primary_inverted small right">Partners</button>
                 <button class=" primary_inverted small right">Speakers</button>
                 <button class=" primary_inverted small right">About</button>
-                <button class=" primary_inverted small right">Home</button>
+                <a href="index.html"><button class=" primary_inverted small right">Home</button></a>
             </div>
         </div>
         <br><br><br>
