--- a/speakers.html
+++ b/speakers.html
@@ -22,6 +22,18 @@
         <div class="page_container">
             <a href="#"><img src="/images/vijay.jpg" alt="" class="spkimg center" ></a>
         </div>
+        <p class="bottom-left"><span style="color: red">Vijay </span>Malpani</p> 
+        <button class="bottom-l" onclick="openmod1();">Know More</button>
 
     </body>
+    <div class="modal_container" id="mod1">
+        <div class="modal_content zi3" id="modct1">
+            <div class="dialogue_pane large12">
+                <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
+            </div>
+            <div class="page_container transparent">
+                <h2>Vijay Malpani </h2>
+            </div>
+        </div>
+    </div>
 </html>
