--- a/index.html
+++ b/index.html
@@ -19,8 +19,18 @@
             <div class="column large9 small12 medium9 center">
                 <br><br><br><br>
                 <h3 class="ta_center"><span style="color: red">TEDx</span>REVAUniversity</h3>
-                <h3 class="ta_center">April 2020</h3>
+                <h6 class="ta_center">2019 was good. <span style="color: red">Time to be better</span></h3>
+                <br><br><br><br>
+                <div class="ta_center">
+                    <button class="primary_red">View Archive</button>
+                    <button class="primary_red">Book Your Passes</button>
+                </div>
+                <br><br><br><br>
             </div>
+            <video class="column large10 small12 medium10 center" nocontrols autoplay>
+                <source src="promo.mp4" type="video/mp4">
+            </video>
+            <br><br><br><br>
         </div>
     </body>
 </html>
