--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>TEDxREVA University Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
+        <link href="extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
 
@@ -12,14 +14,14 @@
                 <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
                 <button class=" primary_inverted small right">Schedule</button>
                 <button class=" primary_inverted small right">Partners</button>
-                <button class=" primary_inverted small right">Speakers</button>
+                <a href="speaker/speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
                 <button class=" primary_inverted small right">About</button>
                 <button class=" primary_inverted small right">Home</button>
             </div>
             <div class="column large9 small12 medium9 center">
                 <br><br><br><br>
-                <h3 class="ta_center"><span style="color: red">TEDx</span>REVAUniversity</h3>
-                <h6 class="ta_center">2019 was good. <span style="color: red">Time to be better</span></h3>
+                <p class="heading ta_center"><span style="color: red">TEDx</span>REVAUniversity</p>
+                <p class="ta_center tagline">2019 was good. <span style="color: red">Time to be better</span></p>
                 <br><br><br><br>
                 <div class="ta_center">
                     <button class="primary_red">View Archive</button>
@@ -31,6 +33,9 @@
                 <source src="promo.mp4" type="video/mp4">
             </video>
             <br><br><br><br>
+        </div>
+        <div class="fullscreen primary_white">
+            <h1>sdgsdgsdg</h1>
         </div>
     </body>
 </html>
