--- a/speaker/speaker2.html
+++ b/speaker/speaker2.html
@@ -17,25 +17,26 @@
                 <button class=" primary_inverted small right">Partners</button>
                 <button class=" primary_inverted small right">Speakers</button>
                 <button class=" primary_inverted small right">About</button>
-                <a href="index.html"><button class=" primary_inverted small right">Home</button></a>
+                <a href="/index.html"><button class=" primary_inverted small right">Home</button></a>
             </div>
         </div>
         <br><br><br>
         <div class="page_container">
-            <a href="#"><img src="mohit.jpg" alt="" class="spkimg center" ></a>
+            <img src="mohit.jpg" alt="" class="spkimg center" >
         </div>
-        <p class="bottom-left"><span style="color: red">Singam Mohit </span>Reddy</p> 
+        <p class="bottom-left"><span style="color: red">Mohit </span>Reddy</p> 
         <button class="bottom-l" onclick="openmod1();">Know More</button>
-        <a href="speaker1.html" class="c-left "> <i class="button circular ms-Icon ms-Icon--Back " aria-hidden="true"></i></a>
+        <a href="speaker1.html" class="c-left "><i class="button circular ms-Icon ms-Icon--Back " aria-hidden="true"></i></a>
         <a href="speaker3.html" class="c-right "><i class="button circular ms-Icon ms-Icon--Forward " aria-hidden="true"></i></a>
+
     </body>
     <div class="modal_container" id="mod1">
-        <div class="modal_content zi3" id="modct1">
+        <div class="modal_content primary_white zi3" id="modct1">
             <div class="dialogue_pane large12">
                 <button class="primary_red right ta_center mod_close_btn" onclick="closemod1();">X</button>
             </div>
-            <div class="page_container transparent">
-                <h2>Vijay Malpani </h2>
+            <div class="page_container">
+                <h2>Mohit Reddy</h2>
             </div>
         </div>
     </div>
