Fixed Index and Speakers

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
 
     <body class="primary_inverted">
-        <div class="page_container center">
-            <div class="column large9 pivot_container">
+        <div class="fullscreen">
+            <div class="column large12 pivot_container primary_inverted">
                 <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
                 <button class=" primary_inverted small right">Schedule</button>
                 <button class=" primary_inverted small right">Partners</button>
@@ -18,24 +18,58 @@
                 <button class=" primary_inverted small right">About</button>
                 <button class=" primary_inverted small right">Home</button>
             </div>
-            <div class="column large9 small12 medium9 center">
-                <br><br><br><br>
-                <p class="heading ta_center"><span style="color: red">TEDx</span>REVAUniversity</p>
-                <p class="ta_center tagline">2019 was good. <span style="color: red">Time to be better</span></p>
-                <br><br><br><br>
-                <div class="ta_center">
-                    <button class="primary_red">View Archive</button>
-                    <button class="primary_red">Book Your Passes</button>
+            <div class="page_container center">
+                <div class="column large9 small12 medium9 center">
+                    <br><br><br><br>
+                    <p class="heading ta_center"><span style="color: red">TEDx</span>REVAUniversity</p>
+                    <p class="ta_center tagline">2019 was good. <span style="color: red">Time to be better</span></p>
+                    <br><br><br><br>
+                    <div class="ta_center">
+                        <button class="cfa primary_red">View Archive</button>
+                        <button class="cfa primary_red">Book Your Passes</button>
+                    </div>
+                    <br><br><br><br>
                 </div>
+                <video class="column large10 small12 medium10 center" nocontrols autoplay muted>
+                    <source src="promo.mp4" type="video/mp4">
+                </video>
                 <br><br><br><br>
             </div>
-            <video class="column large10 small12 medium10 center" nocontrols autoplay>
-                <source src="promo.mp4" type="video/mp4">
-            </video>
-            <br><br><br><br>
         </div>
         <div class="fullscreen primary_white">
-            <h1>sdgsdgsdg</h1>
+        <br><br><br><br><br><br>
+            <div class="page_container ta_center">
+                <h1>About</h1><br><br>
+                    <div class="column large6 medium12 small12 zi2 left" style="min-height: 400px; padding: 50px">
+                        <p class="tagline ta_left">TED: Technology, Entertainment, Design</p>
+                        <p class="ta_left">
+                            Going by the slogan, “Ideas worth spreading,'' TED is a harmonising platform providing opportunities for everyone under the sun. It is delves into deeper learning and unique ideas meant to spread ideas all across the world. It can be individualistic or even team effort, but it is a non-profit organisation, striving to make the world a better place. TED has branched out into various forums, like TEDGlobal, TEDx, TED-Ed, etc. All these are hosted on online digital streaming platforms like YouTube, Netflix, etc. TED is now an ever-growing community filled with ideas from different, opportunistic people focusing on the betterment of the society.
+                        </p>
+                    </div>
+                    <div class="column large6 medium12 small12 zi2 left" style="min-height: 400px; padding: 50px">
+                        <p class="tagline ta_left">TEDxREVAUniversity</p>
+                        <p class="ta_left">
+                            An independently organized TED event, focused on spreading ideas and providing platforms to the experienced and non-experienced, while allowing over 10,000+ students to have a taste of TED and its ever-inspiring and exciting nature. A list of powerful speakers lined up to influence and make you rethink your whole existence. Challenging your ideals, ideologies and more. Open up your mind to something beyond the ordinary while keeping in mind a theme. All of this and more at the Reva University campus, Bangalore
+                        </p>
+                    </div>
+                    <br><br><br><br><br><br><br><br><p style="padding: 50px; color: transparent">.</p>
+
+            </div>
         </div>
+        <div class="primary_inverted">
+            <div class="page_container ta_center">
+                <br><br><br><br><br><br><br><br>
+                <div class="column large9 medium9 small12">
+                    <h1>Speakers</h1><br>
+                    <p class="ta_left" style="font-size: 22px;">
+                        Believers. Achievers. TED speakers are the essence of a TED event. From sharing experiences to reforming young minds, TED speakers play a vital role in any TED event. Presenters can be parts of billion dollar companies, or even emerging small-scale artists. They are motivated and driven to make a change, significant or not. Realising potential and making it a part of their lives. They share what it is like to be themselves, and their challenges and solutions. With speakers of the highest diversity, TEDxREVAUniversity aims to deliver most inspiring, powerful speeches of the century.
+                    </p>
+                    <br><br>
+                    <a href="/speaker/speaker1.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Meet The Speakers</button style="font-size: 22px;"></a>
+                </div>
+                <br><br><br><br><br><br><br><br>
+            </div>
+        </div>
+
     </body>
 </html>
