--- a/speaker/speaker1.html
+++ b/speaker/speaker1.html
@@ -10,15 +10,13 @@
     </head>
 
     <body class="primary_inverted">
-        <div class="page_container center">
-            <div class="column large9 pivot_container">
-                <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
-                <button class=" primary_inverted small right">Schedule</button>
-                <button class=" primary_inverted small right">Partners</button>
-                <button class=" primary_inverted small right">Speakers</button>
-                <button class=" primary_inverted small right">About</button>
-                <a href="/index.html"><button class=" primary_inverted small right">Home</button></a>
-            </div>
+        <div class="column large12 pivot_container primary_inverted">
+            <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
+            <button class=" primary_inverted small right">Schedule</button>
+            <button class=" primary_inverted small right">Partners</button>
+            <a href="speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
+            <button class=" primary_inverted small right">About</button>
+            <a href="/index.html"><button class=" primary_inverted small right">Home</button></a>
         </div>
         <br><br><br>
         <div class="page_container">
@@ -37,6 +35,10 @@
             </div>
             <div class="page_container">
                 <h2>Shivendra Saurav</h2>
+                <br><br>
+                <p style="font-size: 20px;">
+                    I have the ability to solve any programming or design problem based on the criteria provided. Maybe you want a music app, maybe you want a web page for your brand, or maybe you want to make Conway's Game Of Life, I can do all that and much more 
+                </p>
             </div>
         </div>
     </div>
