--- a/speaker/speaker2.html
+++ b/speaker/speaker2.html
@@ -10,15 +10,13 @@
     </head>
 
     <body class="primary_inverted">
-        <div class="page_container center">
-            <div class="column large9 pivot_container">
-                <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
-                <button class=" primary_inverted small right">Schedule</button>
-                <button class=" primary_inverted small right">Partners</button>
-                <button class=" primary_inverted small right">Speakers</button>
-                <button class=" primary_inverted small right">About</button>
-                <a href="/index.html"><button class=" primary_inverted small right">Home</button></a>
-            </div>
+        <div class="column large12 pivot_container primary_inverted">
+            <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
+            <button class=" primary_inverted small right">Schedule</button>
+            <button class=" primary_inverted small right">Partners</button>
+            <a href="speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
+            <button class=" primary_inverted small right">About</button>
+            <a href="/index.html"><button class=" primary_inverted small right">Home</button></a>
         </div>
         <br><br><br>
         <div class="page_container">
