--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         Believers. Achievers. TED speakers are the essence of a TED event. From sharing experiences to reforming young minds, TED speakers play a vital role in any TED event. Presenters can be parts of billion dollar companies, or even emerging small-scale artists. They are motivated and driven to make a change, significant or not. Realising potential and making it a part of their lives. They share what it is like to be themselves, and their challenges and solutions. With speakers of the highest diversity, TEDxREVAUniversity aims to deliver most inspiring, powerful speeches of the century.
                     </p>
                     <br><br>
-                    <a href="/speaker/speaker1.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Meet The Speakers</button style="font-size: 22px;"></a>
+                    <a href="./speaker/speaker1.html"><button style="font-size: 24px; padding: 30px;" class="primary_red">Meet The Speakers</button style="font-size: 22px;"></a>
                 </div>
                 <br><br><br><br><br><br><br><br>
             </div>
