--- a/speaker/speaker2.html
+++ b/speaker/speaker2.html
@@ -16,7 +16,7 @@
             <button class=" primary_inverted small right">Partners</button>
             <a href="speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
             <button class=" primary_inverted small right">About</button>
-            <a href="/index.html"><button class=" primary_inverted small right">Home</button></a>
+            <a href="../index.html"><button class=" primary_inverted small right">Home</button></a>
         </div>
         <br><br><br>
         <div class="page_container">
