--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>TEDxREVA University Home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
-        <link href="extra.css" type="text/css" rel="stylesheet">
+        <link href="./extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
 
