--- a/speaker/speaker3.html
+++ b/speaker/speaker3.html
@@ -3,7 +3,7 @@
     <head>
         <title>TEDxREVA University Speakers</title>
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
-        <link href="/extra.css" type="text/css" rel="stylesheet">
+        <link href="./extra.css" type="text/css" rel="stylesheet">
         <link href="https://fluentdesignforweb.github.io/Icons/css/fluent-icons.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
@@ -16,7 +16,7 @@
             <button class=" primary_inverted small right">Partners</button>
             <a href="speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
             <button class=" primary_inverted small right">About</button>
-            <a href="../index.html"><button class=" primary_inverted small right">Home</button></a>
+            <a href="./index.html"><button class=" primary_inverted small right">Home</button></a>
         </div>
         <br><br><br>
         <div class="page_container">
