Added Animated Background

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                 <button class=" primary_inverted small right">About</button>
                 <button class=" primary_inverted small right">Home</button>
             </div>
+        </div>
+        <div class="grad">
+            <div class="bigx">
+            </div>
+        </div>
+<!--
             <div class="page_container center">
                 <div class="column large9 small12 medium9 center">
                     <br><br><br><br>
@@ -35,8 +41,8 @@
                 </video>
                 <br><br><br><br>
             </div>
-        </div>
-        <div class="fullscreen primary_white">
+-->
+    <div class="fullscreen primary_white">
         <br><br><br><br><br><br>
             <div class="page_container ta_center">
                 <h1>About</h1><br><br>
