--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="column large12 pivot_container primary_inverted">
                 <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
                 <button class=" primary_inverted small right">Schedule</button>
+                <a href="team/team.html"><button class=" primary_inverted small right">Team</button></a>
                 <button class=" primary_inverted small right">Partners</button>
                 <a href="speaker/speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
                 <button class=" primary_inverted small right">About</button>
