--- a/team/team.html
+++ b/team/team.html
@@ -4,7 +4,7 @@
         <title>TEDxREVA University Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
-        <link href="./extra.css" type="text/css" rel="stylesheet">
+        <link href="../extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
 </html>
@@ -21,10 +21,11 @@
             <button class=" primary_inverted small right">Home</button>
         </div>
         <div class="primary_white">
-            <br><br>
-                <div class="page_container ta_center">
+            <br><br><br><br><br><br>
+                <div class="page_container">
                     <h1>Team </h1><br><br>
-                        <div class="column large4 medium6 small6 zi2 left" style="min-height: 400px; padding: 50px">
+                    <div class="scroll-menu zi2 column large6 medium6 small12">
+                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
                             <img src="shiv.jpg" alt="" class=" center" style="border-radius: 100%;">
                             <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Shivendra</span> Saurav</p>
                             <p class="ta_left">
@@ -32,7 +33,7 @@
                             </p>
                             <button class="bottom-l">Know More</button>
                         </div>
-                        <div class="column large4 medium6 small6 zi2 left" style="min-height: 400px; padding: 50px">
+                        <div style="min-height: 400px; padding: 50px; max-width: 30%;;">
                             <img src="mohit.jpg" alt="" class=" center" style="border-radius: 100%;">
                             <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Mohit</span> Reddy</p>
                             <p class="ta_left">
@@ -40,7 +41,7 @@
                             </p>
                             <button class="bottom-l">Know More</button>
                         </div>
-                        <div class="column large4 medium6 small6 zi2 left" style="min-height: 400px; padding: 50px">
+                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
                             <img src="vijay.jpg" alt="" class=" center" style="border-radius: 100%;">
                             <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Vijay</span> Malpani</p>
                             <p class="ta_left">
@@ -48,10 +49,7 @@
                             </p>
                             <button class="bottom-l">Know More</button>
                         </div>
-                        <div class="column large12">
-                            <br><br>
-                        </div>
-                        <div class="column large4 medium6 small6 zi2 left" style="min-height: 400px; padding: 50px">
+                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
                             <img src="shiv.jpg" alt="" class=" center" style="border-radius: 100%;">
                             <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Shivendra</span> Saurav</p>
                             <p class="ta_left">
@@ -59,7 +57,7 @@
                             </p>
                             <button class="bottom-l">Know More</button>
                         </div>
-                        <div class="column large4 medium6 small6 zi2 left" style="min-height: 400px; padding: 50px">
+                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
                             <img src="mohit.jpg" alt="" class=" center" style="border-radius: 100%;">
                             <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Mohit</span> Reddy</p>
                             <p class="ta_left">
@@ -67,7 +65,7 @@
                             </p>
                             <button class="bottom-l">Know More</button>
                         </div>
-                        <div class="column large4 medium6 small6 zi2 left" style="min-height: 400px; padding: 50px">
+                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
                             <img src="vijay.jpg" alt="" class=" center" style="border-radius: 100%;">
                             <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Vijay</span> Malpani</p>
                             <p class="ta_left">
@@ -75,6 +73,7 @@
                             </p>
                             <button class="bottom-l">Know More</button>
                         </div>
+                    </div>
                         <br><br><br><br><br><br><br><br><p style="padding: 50px; color: transparent">.</p>
     
                 </div>
