--- a/team/team.html
+++ b/team/team.html
@@ -3,6 +3,8 @@
     <head>
         <title>TEDxREVA University Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fluentdesignforweb.github.io/Icons/css/fluent-icons.css" rel="stylesheet" type="text/css">
+        <link href="https://fluentdesignforweb.github.io/normalize.css" rel="stylesheet" type="text/css">
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
         <link href="../extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
@@ -20,63 +22,58 @@
             <button class=" primary_inverted small right">About</button>
             <button class=" primary_inverted small right">Home</button>
         </div>
-        <div class="primary_white">
+        <div>
             <br><br><br><br><br><br>
                 <div class="page_container">
                     <h1>Team </h1><br><br>
-                    <div class="scroll-menu zi2 column large6 medium6 small12">
-                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
-                            <img src="shiv.jpg" alt="" class=" center" style="border-radius: 100%;">
-                            <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Shivendra</span> Saurav</p>
-                            <p class="ta_left">
-                                Brief desc.
-                            </p>
-                            <button class="bottom-l">Know More</button>
+                    <div class="horizontal">
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div style="min-height: 400px; padding: 50px; max-width: 30%;;">
-                            <img src="mohit.jpg" alt="" class=" center" style="border-radius: 100%;">
-                            <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Mohit</span> Reddy</p>
-                            <p class="ta_left">
-                                Brief desc.
-                            </p>
-                            <button class="bottom-l">Know More</button>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
-                            <img src="vijay.jpg" alt="" class=" center" style="border-radius: 100%;">
-                            <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Vijay</span> Malpani</p>
-                            <p class="ta_left">
-                                Brief desc.
-                            </p>
-                            <button class="bottom-l">Know More</button>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
-                            <img src="shiv.jpg" alt="" class=" center" style="border-radius: 100%;">
-                            <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Shivendra</span> Saurav</p>
-                            <p class="ta_left">
-                                Brief desc.
-                            </p>
-                            <button class="bottom-l">Know More</button>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
-                            <img src="mohit.jpg" alt="" class=" center" style="border-radius: 100%;">
-                            <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Mohit</span> Reddy</p>
-                            <p class="ta_left">
-                                Brief desc.
-                            </p>
-                            <button class="bottom-l">Know More</button>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div style="min-height: 400px; padding: 50px; max-width: 30%;">
-                            <img src="vijay.jpg" alt="" class=" center" style="border-radius: 100%;">
-                            <p class="tagline ta_left" style="text-align: center;"><span style="color: red;">Vijay</span> Malpani</p>
-                            <p class="ta_left">
-                                Brief desc.
-                            </p>
-                            <button class="bottom-l">Know More</button>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
+                        </div>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
+                        </div>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
+                        </div>
+                        <div class="primary_white zi2">
+                            <img src="shiv.jpg">
+                            <p>Web Development</p>
+                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                     </div>
-                        <br><br><br><br><br><br><br><br><p style="padding: 50px; color: transparent">.</p>
-    
                 </div>
-            </div>
+        </div>
         </body>
     </html>
