--- a/team/team.html
+++ b/team/team.html
@@ -29,47 +29,42 @@
                     <div class="horizontal">
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Organizing</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Operations</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Finance and Management</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Web Design and User Experience</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Media Direction</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Graphics Design</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Curation</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                         <div class="primary_white zi2">
                             <img src="shiv.jpg">
-                            <p>Web Development</p>
-                            <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
-                        </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
-                            <p>Web Development</p>
+                            <p>Content Writing</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
                     </div>
