Team Scrolling Done

--- a/team/team.html
+++ b/team/team.html
@@ -8,6 +8,7 @@
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
         <link href="../extra.css" type="text/css" rel="stylesheet">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
+        <script src="scroll.js"></script>
     </head>
 </html>
 
@@ -26,44 +27,44 @@
             <br><br><br><br><br><br>
                 <div class="page_container">
                     <h1>Team </h1><br><br>
-                    <div class="horizontal">
+                    <div class="horizontal" onmousewheel="scrleft(event);" id="scroll">
                         <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                            <img src="organisers.jpg" class="tmname">
                             <p>Organizing</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                        <div class="primary_white zi2" class="tmname">
+                            <img src="operations.jpg">
                             <p>Operations</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                        <div class="primary_white zi2" class="tmname">
+                            <img src="finance.jpg">
                             <p>Finance and Management</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                        <div class="primary_white zi2" class="tmname">
+                            <img src="webdesign.png">
                             <p>Web Design and User Experience</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                        <div class="primary_white zi2" class="tmname">
+                            <img src="mddir2.jpg">
                             <p>Media Direction</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                        <div class="primary_white zi2" class="tmname">
+                            <img src="graphics.jpg">
                             <p>Graphics Design</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                        <div class="primary_white zi2" class="tmname">
+                            <img src="curation.jpg">
                             <p>Curation</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
-                        <div class="primary_white zi2">
-                            <img src="shiv.jpg">
+                        <div class="primary_white zi2" class="tmname">
+                            <img src="content.jpg">
                             <p>Content Writing</p>
                             <button class="icon ms-Icon ms-Icon--Info primary_red" style="margin-left: 20px;"></button>
                         </div>
