--- a/team/team.html
+++ b/team/team.html
@@ -89,8 +89,8 @@
                     <div class="column large6 medium4 small12" style="position: relative; top: -100px;">
                         <p class="heading">Web Design and User Experience</p>
                         <br><br>
-                        <p style="font-size: 18px;">This amazing site you're viewing right now was designed by our wetn design team. Striving to create the ultimate user experience for you, 
-                            this team stops now where to come up with innovative ideas. </p>
+                        <p style="font-size: 18px;">This amazing site you're viewing right now was designed by our web design team. Striving to create the ultimate user experience for you, 
+                            this team stops nowhere to come up with innovative ideas. </p>
                     </div>
 
                     <div class="column large6 medium6 small12" style="overflow-y: auto;">
