Added Animated Background

--- a/speaker/speaker1.html
+++ b/speaker/speaker1.html
@@ -4,12 +4,15 @@
         <title>TEDxREVA University Speakers</title>
         <link href="https://fluentdesignforweb.github.io/fluent.css" type="text/css" rel="stylesheet">
         <link href="../extra.css" type="text/css" rel="stylesheet">
+        <link href="../anim.css" type="text/css" rel="stylesheet">
         <link href="https://fluentdesignforweb.github.io/Icons/css/fluent-icons.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://fluentdesignforweb.github.io/fluent.js"></script>
     </head>
 
     <body class="primary_inverted">
+        <svg class=" spkbganim"></svg>
+
         <div class="column large12 pivot_container primary_inverted">
             <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
             <button class=" primary_inverted small right">Schedule</button>
@@ -20,7 +23,7 @@
         </div>
         <br><br><br>
         <div class="page_container">
-            <img src="shiv.jpg" alt="" class="spkimg center" >
+            <img src="shiv.jpg" alt="" class="spkimg center">
         </div>
         <p class="bottom-left"><span style="color: red">Shivendra </span>Saurav</p> 
         <button class="bottom-l" onclick="openmod1();">Know More</button>
