--- a/footer.html
+++ b/footer.html
@@ -11,15 +11,15 @@
 
 </head>
 <body>
-    <footer class="primary_red column large12 medium12 small12">
+    <footer class="primary_red zi2">
         <div class="column large6">
-        <h3>Get In Touch</h3>
-        <h6>Frequently Asked Question</h6>
-        <h6>Privacy Policy</h6>
-        <h6>Follow Us On</h6>
-        <a href="https://www.facebook.com/tedxrevauniversity/"><button style="background-color: #1877f2; color: #ffffff;" class="zi3">Facebook</button></a>
-        <a href="https://www.instagram.com/tedxrevauniversity/"><button style="background-color: #7232bd; color: #ffffff;" class="zi3">Instagram</button></a>
-        <a href="https://youtu.be/8FzmHqF1trs"><button style="background-color: #282828; color: #ffffff;" class="zi3">YouTube</button></a>
+            <h3>Get In Touch</h3>
+            <h6>Frequently Asked Question</h6>
+            <h6>Privacy Policy</h6>
+            <h6>Follow Us On</h6>
+            <a href="https://www.facebook.com/tedxrevauniversity/"><button style="background-color: #1877f2; color: #ffffff;" class="zi3">Facebook</button></a>
+            <a href="https://www.instagram.com/tedxrevauniversity/"><button style="background-color: #7232bd; color: #ffffff;" class="zi3">Instagram</button></a>
+            <a href="https://youtu.be/8FzmHqF1trs"><button style="background-color: #282828; color: #ffffff;" class="zi3">YouTube</button></a>
         </div>
         <div class="column large6">
             
