--- a/speaker/speaker1.html
+++ b/speaker/speaker1.html
@@ -23,7 +23,7 @@
         </div>
         <br><br><br>
         <div class="page_container">
-            <img src="shiv.jpg" alt="" class="spkimg center">
+            <img src="shiv.png" alt="" class="spkimg center">
         </div>
         <p class="bottom-left"><span style="color: red">Shivendra </span>Saurav</p> 
         <button class="bottom-l" onclick="openmod1();">Know More</button>
