--- a/speakers/speaker1.html
+++ b/speakers/speaker1.html
@@ -11,17 +11,17 @@
     </head>
 
     <body class="primary_inverted">
-        <svg class=" spkbganim"></svg>
-
-        <div class="column large12 pivot_container primary_inverted">
-            <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
-            <button class=" primary_inverted small right">Schedule</button>
-            <button class=" primary_inverted small right">Partners</button>
-            <a href="speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
-            <button class=" primary_inverted small right">About</button>
-            <a href="../index.html"><button class=" primary_inverted small right">Home</button></a>
-        </div>
-        <br><br><br>
+<div id="body">
+        <div class="topnav zi2 primary_inverted" style="padding: 10px 15px;">
+            <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
+                <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
+            </button>
+            <div style="font-family: 'Segoe UI' ,Arial, Helvetica, sans-serif;">
+                <span style="color: red;">TEDx</span><span style="color: white">REVAUniversity</span><br>
+                <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
+            </div>
+        </div>  
+<br>
         <div class="page_container">
             <img src="shiv.png" alt="" class="spkimg center">
         </div>
@@ -45,4 +45,22 @@
             </div>
         </div>
     </div>
+</div>
+
+                
+<div class="sidepanel_container" id="side1" style="background: #2e2e2e55;">
+    <div class="sidepanel_content zi3 right" id="modct1" style="background: #2e2e2e;">
+        <button class="primary_red right ta_center mod_close_btn" onclick="closeside1();">X</button><br><br><br>
+        <div class="page_container">
+            <a href="../index.html"><div class="large12 panel_item">Home</div></a>
+            <a href="../speakers/speaker1.html"><div class="large12 panel_item">Speakers</div></a>
+            <a href="../partners/partner.html"><div class="large12 panel_item">Partners</div></a>
+            <a href="../index.html"><div class="large12 panel_item">Schedule</div></a>
+            <a href="../index.html"><div class="large12 panel_item">About</div></a>
+            <a href="../social/social.html"><div class="large12 panel_item">Social</div></a>
+            <a href="../2019.html"><div class="large12 panel_item">Watch Previous Talks</div></a>
+        </div>
+    </div>
+</div>
+
 </html>
