--- a/team/team.html
+++ b/team/team.html
@@ -15,19 +15,16 @@
 
 <body class="primary_inverted">
     <div id="body">
-
-        <div class="fullscreen">
-            <div class="column large12 pivot_container primary_inverted">
-                <button class=" primary_inverted small left"><span style="color: red">TEDx</span>REVAUniversity</button>
-                <button class=" primary_inverted small right">Schedule</button>
-                <a href="../team/team.html"><button class=" primary_inverted small right">Team</button></a>
-                <button class=" primary_inverted small right">Partners</button>
-                <a href="../speaker/speaker1.html"><button class=" primary_inverted small right">Speakers</button></a>
-                <button class=" primary_inverted small right">About</button>
-                <button class=" primary_inverted small right">Home</button>
+        <div class="topnav zi2 primary_inverted" style="padding: 10px 15px;">
+            <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
+                <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
+            </button>
+            <div style="font-family: 'Segoe UI' ,Arial, Helvetica, sans-serif;">
+                <span style="color: red;">TEDx</span><span style="color: white">REVAUniversity</span><br>
+                <span style="color: red; font-size: 10px;">x</span><span style="color: white; font-size: 10px;">=Independentaly Organized TED Event</span>
             </div>
-            <div>
-                <br><br><br><br><br><br>
+        </div>  
+                <br><br><br><br>
                     <div class="page_container">
                         <h1>Team </h1><br><br>
                         <div class="horizontal" onmousewheel="scrleft(event);" id="scroll">
@@ -73,8 +70,6 @@
                             </div>
                         </div>
                     </div>
-            </div>
-        </div>
         </div>
     </body>
 
@@ -128,5 +123,20 @@
             </div>
         </div>
     <!--Modal 1 Ends Here-->
- 
+
+    <div class="sidepanel_container" id="side1" style="background: #2e2e2e55;">
+        <div class="sidepanel_content zi3 right" id="modct1" style="background: #2e2e2e;">
+            <button class="primary_red right ta_center mod_close_btn" onclick="closeside1();">X</button><br><br><br>
+            <div class="page_container">
+                <a href="../index.html"><div class="large12 panel_item">Home</div></a>
+                <a href="../speakers/speaker1.html"><div class="large12 panel_item">Speakers</div></a>
+                <a href="../partners/partner.html"><div class="large12 panel_item">Partners</div></a>
+                <a href="../index.html"><div class="large12 panel_item">Schedule</div></a>
+                <a href="../index.html"><div class="large12 panel_item">About</div></a>
+                <a href="../social/social.html"><div class="large12 panel_item">Social</div></a>
+                <a href="../2019.html"><div class="large12 panel_item">Watch Previous Talks</div></a>
+            </div>
+        </div>
+    </div>
+    
     </html>
