--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body class="primary_inverted">
       
 <div id="body">
-        <div class="topnav zi2 primary_inverted" style="padding: 10px 15px;">
+        <div class="topnav zi2 primary_inverted" style="padding: 10px 15px; position: sticky; top: 2px;">
             <button  aria-label="Menu" class="right icon" onclick="openside1();" style="background: rgba(255, 255, 255, 0); color: white">
                 <i class="ms-Icon ms-Icon--GlobalNavButton" aria-hidden="true"></i>
             </button>
